rds.tf
resource "aws_db_subnet_group" "main" {
  name = "nagoyameshi-db-subnet-group"
  subnet_ids = [
    aws_subnet.private_1.id,
    aws_subnet.private_2.id
  ]

  tags = {
    Name = "nagoyameshi-db-subnet-group"
  }
}

resource "aws_db_instance" "main" {
  identifier              = "nagoyameshi-db"
  engine                  = "mysql"
  engine_version          = "8.0"
  instance_class          = "db.t3.micro"
  allocated_storage       = 20
  db_name                 = "nagoyameshi"
  username                = "admin"
  password                = "Password123!"
  db_subnet_group_name    = aws_db_subnet_group.main.name
  vpc_security_group_ids  = [aws_security_group.rds_sg.id]
  multi_az                = true
  publicly_accessible     = false
  backup_retention_period = 7
  skip_final_snapshot     = true

  tags = {
    Name = "nagoyameshi-db"
  }
}
